--- a/Camper Water System Program/UI/mainWindow.ui
+++ b/Camper Water System Program/UI/mainWindow.ui
@@ -6,22 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>720</width>
     <height>480</height>
    </rect>
   </property>
   <property name="maximumSize">
    <size>
-    <width>800</width>
-    <height>480</height>
+    <width>1250</width>
+    <height>850</height>
    </size>
   </property>
   <property name="windowTitle">
-   <string>Camper Sensor System</string>
-  </property>
-  <property name="windowIcon">
-   <iconset>
-    <normaloff>:/capstoneImages/icon.jpg</normaloff>:/capstoneImages/icon.jpg</iconset>
+   <string>MainWindow</string>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
@@ -32,47 +28,41 @@
    </property>
    <property name="minimumSize">
     <size>
-     <width>0</width>
-     <height>0</height>
+     <width>720</width>
+     <height>480</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
-     <width>800</width>
-     <height>480</height>
+     <width>1250</width>
+     <height>850</height>
     </size>
    </property>
    <widget class="QTabWidget" name="TabWidget">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>800</width>
+      <x>1</x>
+      <y>-10</y>
+      <width>720</width>
       <height>480</height>
      </rect>
     </property>
     <property name="minimumSize">
      <size>
-      <width>0</width>
-      <height>0</height>
+      <width>720</width>
+      <height>480</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
-      <width>800</width>
-      <height>480</height>
+      <width>1250</width>
+      <height>850</height>
      </size>
     </property>
     <property name="font">
      <font>
       <pointsize>12</pointsize>
      </font>
-    </property>
-    <property name="statusTip">
-     <string/>
-    </property>
-    <property name="whatsThis">
-     <string/>
     </property>
     <property name="accessibleName">
      <string/>
@@ -81,7 +71,7 @@
      <enum>Qt::LeftToRight</enum>
     </property>
     <property name="tabPosition">
-     <enum>QTabWidget::North</enum>
+     <enum>QTabWidget::South</enum>
     </property>
     <property name="currentIndex">
      <number>1</number>
@@ -111,89 +101,13 @@
      <attribute name="whatsThis">
       <string>Shows status of sensors</string>
      </attribute>
-     <widget class="QLabel" name="GreyWaterLabel">
-      <property name="geometry">
-       <rect>
-        <x>440</x>
-        <y>40</y>
-        <width>292</width>
-        <height>37</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>12</pointsize>
-        <kerning>true</kerning>
-       </font>
-      </property>
-      <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#000000;&quot;&gt;Grey Water&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="BlackWaterLabel">
-      <property name="geometry">
-       <rect>
-        <x>440</x>
-        <y>228</y>
-        <width>293</width>
-        <height>36</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>12</pointsize>
-        <kerning>true</kerning>
-       </font>
-      </property>
-      <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#000000;&quot;&gt;Black Water&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="BatteryLabel">
-      <property name="geometry">
-       <rect>
-        <x>60</x>
-        <y>228</y>
-        <width>292</width>
-        <height>36</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>12</pointsize>
-        <kerning>true</kerning>
-       </font>
-      </property>
-      <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#000000;&quot;&gt;Battery&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="FreshWaterLabel">
-      <property name="geometry">
-       <rect>
-        <x>60</x>
-        <y>37</y>
-        <width>293</width>
-        <height>37</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>12</pointsize>
-        <kerning>true</kerning>
-       </font>
-      </property>
-      <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#000000;&quot;&gt;Fresh Water&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-      </property>
-     </widget>
      <widget class="QProgressBar" name="FreshWaterProgressBar">
       <property name="geometry">
        <rect>
-        <x>60</x>
-        <y>80</y>
-        <width>300</width>
-        <height>80</height>
+        <x>70</x>
+        <y>150</y>
+        <width>270</width>
+        <height>70</height>
        </rect>
       </property>
       <property name="minimumSize">
@@ -209,32 +123,13 @@
        <number>24</number>
       </property>
      </widget>
-     <widget class="QProgressBar" name="BatteryProgressBar">
-      <property name="geometry">
-       <rect>
-        <x>60</x>
-        <y>270</y>
-        <width>300</width>
-        <height>80</height>
-       </rect>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>270</width>
-        <height>70</height>
-       </size>
-      </property>
-      <property name="value">
-       <number>24</number>
-      </property>
-     </widget>
      <widget class="QProgressBar" name="BlackWaterProgressBar">
       <property name="geometry">
        <rect>
-        <x>440</x>
-        <y>270</y>
-        <width>300</width>
-        <height>80</height>
+        <x>70</x>
+        <y>300</y>
+        <width>270</width>
+        <height>70</height>
        </rect>
       </property>
       <property name="minimumSize">
@@ -250,10 +145,10 @@
      <widget class="QProgressBar" name="GreyWaterProgressBar">
       <property name="geometry">
        <rect>
-        <x>440</x>
-        <y>83</y>
-        <width>300</width>
-        <height>80</height>
+        <x>380</x>
+        <y>150</y>
+        <width>270</width>
+        <height>70</height>
        </rect>
       </property>
       <property name="minimumSize">
@@ -266,138 +161,188 @@
        <number>24</number>
       </property>
      </widget>
-     <widget class="QLabel" name="SensorInfoBackground">
+     <widget class="QProgressBar" name="BatteryProgressBar">
       <property name="geometry">
        <rect>
-        <x>0</x>
-        <y>-35</y>
-        <width>800</width>
-        <height>480</height>
+        <x>380</x>
+        <y>300</y>
+        <width>270</width>
+        <height>70</height>
        </rect>
       </property>
-      <property name="maximumSize">
+      <property name="minimumSize">
        <size>
-        <width>800</width>
-        <height>480</height>
+        <width>270</width>
+        <height>70</height>
        </size>
       </property>
-      <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/images/icons/background1.jpg&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <property name="value">
+       <number>24</number>
       </property>
      </widget>
-     <zorder>SensorInfoBackground</zorder>
-     <zorder>GreyWaterLabel</zorder>
-     <zorder>BlackWaterLabel</zorder>
-     <zorder>BatteryLabel</zorder>
-     <zorder>FreshWaterLabel</zorder>
-     <zorder>FreshWaterProgressBar</zorder>
-     <zorder>BatteryProgressBar</zorder>
-     <zorder>BlackWaterProgressBar</zorder>
-     <zorder>GreyWaterProgressBar</zorder>
+     <widget class="QLabel" name="BlackWaterLabel">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>270</y>
+        <width>121</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+        <kerning>true</kerning>
+       </font>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;Black Water&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="FreshWaterLabel">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>120</y>
+        <width>121</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+        <kerning>true</kerning>
+       </font>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;Fresh Water&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="GreyWaterLabel">
+      <property name="geometry">
+       <rect>
+        <x>380</x>
+        <y>120</y>
+        <width>121</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+        <kerning>true</kerning>
+       </font>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;Grey Water&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="BatteryLabel">
+      <property name="geometry">
+       <rect>
+        <x>380</x>
+        <y>270</y>
+        <width>121</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+        <kerning>true</kerning>
+       </font>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;Battery&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="UsageHistory">
      <attribute name="title">
       <string>UsageHistory</string>
      </attribute>
      <attribute name="toolTip">
-      <string>Click to see a graph of the sensor usage.</string>
+      <string>Click to see the history of the devices usage through graphs</string>
      </attribute>
      <attribute name="whatsThis">
-      <string>Shows a graph of the sensor usage.</string>
+      <string>Shows the history of the device's usage through graphs</string>
      </attribute>
-     <widget class="QPushButton" name="CheckGraphs">
+     <widget class="QLabel" name="FreshWaterUsageLabel">
       <property name="geometry">
        <rect>
-        <x>650</x>
-        <y>140</y>
-        <width>130</width>
-        <height>130</height>
+        <x>110</x>
+        <y>80</y>
+        <width>101</width>
+        <height>31</height>
        </rect>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>130</width>
-        <height>130</height>
-       </size>
-      </property>
-      <property name="statusTip">
-       <string>Click to reset the graph.</string>
-      </property>
-      <property name="whatsThis">
-       <string>Refreshes the graph when clicked.</string>
-      </property>
-      <property name="autoFillBackground">
-       <bool>false</bool>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-image: url(:/images/icons/RefreshBttnImg.jpg);</string>
       </property>
       <property name="text">
-       <string/>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;Fresh Water&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
-     <widget class="MplWidget" name="SensorGraph" native="true">
+     <widget class="QLabel" name="GreyWaterUsageLabel">
       <property name="geometry">
        <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>629</width>
-        <height>429</height>
+        <x>390</x>
+        <y>80</y>
+        <width>101</width>
+        <height>31</height>
        </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="UsageBackground">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>-40</y>
-        <width>800</width>
-        <height>480</height>
-       </rect>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>800</width>
-        <height>480</height>
-       </size>
       </property>
       <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/images/icons/background1.jpg&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;Grey Water&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
-     <zorder>UsageBackground</zorder>
-     <zorder>CheckGraphs</zorder>
-     <zorder>SensorGraph</zorder>
+     <widget class="QLabel" name="BlackWaterUsageLabel">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>250</y>
+        <width>101</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;Black Water&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="BatterUsageLabel">
+      <property name="geometry">
+       <rect>
+        <x>390</x>
+        <y>250</y>
+        <width>101</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;Battery&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="Power">
      <attribute name="title">
       <string>Power</string>
      </attribute>
-     <attribute name="toolTip">
-      <string>Click to access power buttons.</string>
-     </attribute>
-     <attribute name="whatsThis">
-      <string>Power has the power button for the application and Raspberry Pi.</string>
-     </attribute>
-     <widget class="QPushButton" name="powerApp">
+     <widget class="QPushButton" name="appPower">
       <property name="geometry">
        <rect>
         <x>120</x>
-        <y>100</y>
-        <width>200</width>
-        <height>200</height>
+        <y>170</y>
+        <width>140</width>
+        <height>140</height>
        </rect>
       </property>
       <property name="minimumSize">
        <size>
-        <width>200</width>
-        <height>200</height>
+        <width>140</width>
+        <height>140</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>200</width>
-        <height>200</height>
+        <width>140</width>
+        <height>140</height>
        </size>
       </property>
       <property name="statusTip">
@@ -410,17 +355,17 @@
        <bool>false</bool>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-image: url(:/images/icons/AppPwrBttnImg.jpg);</string>
+       <string notr="true"/>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
-     <widget class="QPushButton" name="powerRasberry">
+     <widget class="QPushButton" name="raspPower">
       <property name="geometry">
        <rect>
-        <x>480</x>
-        <y>100</y>
+        <x>420</x>
+        <y>170</y>
         <width>200</width>
         <height>200</height>
        </rect>
@@ -437,104 +382,25 @@
         <height>200</height>
        </size>
       </property>
-      <property name="acceptDrops">
-       <bool>false</bool>
-      </property>
       <property name="statusTip">
        <string>Click to turn off the Raspberry Pi</string>
       </property>
       <property name="whatsThis">
        <string>Turns off the Raspberry Pi</string>
       </property>
-      <property name="styleSheet">
-       <string notr="true">background-image: url(:/images/icons/RaspPiPwrBttnImg.jpg);</string>
-      </property>
       <property name="text">
-       <string/>
+       <string>Turn off Pi</string>
       </property>
      </widget>
-     <widget class="QLabel" name="SensorInfoBackground_2">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>-30</y>
-        <width>800</width>
-        <height>480</height>
-       </rect>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>800</width>
-        <height>480</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/images/icons/background1.jpg&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-      </property>
-     </widget>
-     <zorder>SensorInfoBackground_2</zorder>
-     <zorder>powerApp</zorder>
-     <zorder>powerRasberry</zorder>
     </widget>
    </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>6</y>
-      <width>900</width>
-      <height>480</height>
-     </rect>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>900</width>
-      <height>480</height>
-     </size>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="MainBackground">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>800</width>
-      <height>480</height>
-     </rect>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>800</width>
-      <height>480</height>
-     </size>
-    </property>
-    <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/images/icons/background1.jpg&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-    </property>
-   </widget>
-   <zorder>MainBackground</zorder>
-   <zorder>label</zorder>
-   <zorder>TabWidget</zorder>
   </widget>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>MplWidget</class>
-   <extends>QWidget</extends>
-   <header>mplwidget.h</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <tabstops>
-  <tabstop>powerApp</tabstop>
-  <tabstop>powerRasberry</tabstop>
-  <tabstop>CheckGraphs</tabstop>
+  <tabstop>TabWidget</tabstop>
  </tabstops>
  <resources>
-  <include location="../image.qrc"/>
+  <include location="../new.qrc"/>
  </resources>
  <connections/>
 </ui>
