--- a/Camper Water System Program/UI/mainWindow.ui
+++ b/Camper Water System Program/UI/mainWindow.ui
@@ -12,8 +12,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>1250</width>
-    <height>850</height>
+    <width>720</width>
+    <height>480</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -28,14 +28,14 @@
    </property>
    <property name="minimumSize">
     <size>
-     <width>720</width>
-     <height>480</height>
+     <width>0</width>
+     <height>0</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
-     <width>1250</width>
-     <height>850</height>
+     <width>720</width>
+     <height>480</height>
     </size>
    </property>
    <widget class="QTabWidget" name="TabWidget">
@@ -49,13 +49,13 @@
     </property>
     <property name="minimumSize">
      <size>
-      <width>720</width>
-      <height>480</height>
+      <width>0</width>
+      <height>0</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
-      <width>1250</width>
+      <width>720</width>
       <height>850</height>
      </size>
     </property>
@@ -71,7 +71,7 @@
      <enum>Qt::LeftToRight</enum>
     </property>
     <property name="tabPosition">
-     <enum>QTabWidget::South</enum>
+     <enum>QTabWidget::North</enum>
     </property>
     <property name="currentIndex">
      <number>1</number>
@@ -256,6 +256,40 @@
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;Battery&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
+     <widget class="QLabel" name="StatusBackground">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>10</y>
+        <width>720</width>
+        <height>480</height>
+       </rect>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>720</width>
+        <height>480</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>1250</width>
+        <height>850</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/newPrefix/background.jpg&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <zorder>StatusBackground</zorder>
+     <zorder>FreshWaterProgressBar</zorder>
+     <zorder>BlackWaterProgressBar</zorder>
+     <zorder>GreyWaterProgressBar</zorder>
+     <zorder>BatteryProgressBar</zorder>
+     <zorder>BlackWaterLabel</zorder>
+     <zorder>FreshWaterLabel</zorder>
+     <zorder>GreyWaterLabel</zorder>
+     <zorder>BatteryLabel</zorder>
     </widget>
     <widget class="QWidget" name="UsageHistory">
      <attribute name="title">
@@ -267,56 +301,46 @@
      <attribute name="whatsThis">
       <string>Shows the history of the device's usage through graphs</string>
      </attribute>
-     <widget class="QLabel" name="FreshWaterUsageLabel">
+     <widget class="QLabel" name="HistoryBackground">
       <property name="geometry">
        <rect>
-        <x>110</x>
-        <y>80</y>
-        <width>101</width>
-        <height>31</height>
+        <x>0</x>
+        <y>-20</y>
+        <width>720</width>
+        <height>480</height>
        </rect>
       </property>
+      <property name="minimumSize">
+       <size>
+        <width>720</width>
+        <height>480</height>
+       </size>
+      </property>
       <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;Fresh Water&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/newPrefix/background.jpg&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
-     <widget class="QLabel" name="GreyWaterUsageLabel">
+     <widget class="QPushButton" name="CheckGraphs">
       <property name="geometry">
        <rect>
-        <x>390</x>
-        <y>80</y>
-        <width>101</width>
-        <height>31</height>
+        <x>310</x>
+        <y>390</y>
+        <width>87</width>
+        <height>29</height>
        </rect>
       </property>
       <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;Grey Water&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       <string>Refresh</string>
       </property>
      </widget>
-     <widget class="QLabel" name="BlackWaterUsageLabel">
+     <widget class="MplWidget" name="SensorGraph" native="true">
       <property name="geometry">
        <rect>
-        <x>110</x>
-        <y>250</y>
-        <width>101</width>
-        <height>31</height>
+        <x>0</x>
+        <y>0</y>
+        <width>711</width>
+        <height>379</height>
        </rect>
-      </property>
-      <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;Black Water&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="BatterUsageLabel">
-      <property name="geometry">
-       <rect>
-        <x>390</x>
-        <y>250</y>
-        <width>101</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;Battery&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </widget>
@@ -324,13 +348,32 @@
      <attribute name="title">
       <string>Power</string>
      </attribute>
-     <widget class="QPushButton" name="appPower">
+     <widget class="QLabel" name="PowerBackground">
       <property name="geometry">
        <rect>
-        <x>120</x>
-        <y>170</y>
-        <width>140</width>
-        <height>140</height>
+        <x>0</x>
+        <y>0</y>
+        <width>720</width>
+        <height>480</height>
+       </rect>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>720</width>
+        <height>480</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/newPrefix/background.jpg&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="powerApp">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>120</y>
+        <width>195</width>
+        <height>205</height>
        </rect>
       </property>
       <property name="minimumSize">
@@ -341,8 +384,8 @@
       </property>
       <property name="maximumSize">
        <size>
-        <width>140</width>
-        <height>140</height>
+        <width>195</width>
+        <height>205</height>
        </size>
       </property>
       <property name="statusTip">
@@ -355,31 +398,31 @@
        <bool>false</bool>
       </property>
       <property name="styleSheet">
-       <string notr="true"/>
+       <string notr="true">background-image: url(:/newPrefix/powerApp.png);</string>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
-     <widget class="QPushButton" name="raspPower">
+     <widget class="QPushButton" name="powerRasberry">
       <property name="geometry">
        <rect>
         <x>420</x>
-        <y>170</y>
-        <width>200</width>
-        <height>200</height>
+        <y>120</y>
+        <width>195</width>
+        <height>205</height>
        </rect>
       </property>
       <property name="minimumSize">
        <size>
-        <width>200</width>
+        <width>195</width>
         <height>200</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>200</width>
-        <height>200</height>
+        <width>300</width>
+        <height>300</height>
        </size>
       </property>
       <property name="statusTip">
@@ -388,16 +431,60 @@
       <property name="whatsThis">
        <string>Turns off the Raspberry Pi</string>
       </property>
+      <property name="styleSheet">
+       <string notr="true">background-image: url(:/newPrefix/raspberrypi.png);</string>
+      </property>
       <property name="text">
        <string>Turn off Pi</string>
       </property>
      </widget>
     </widget>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>720</width>
+      <height>480</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>720</width>
+      <height>480</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>1250</width>
+      <height>850</height>
+     </size>
+    </property>
+    <property name="lineWidth">
+     <number>0</number>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/newPrefix/background.jpg&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <zorder>label</zorder>
+   <zorder>TabWidget</zorder>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>MplWidget</class>
+   <extends>QWidget</extends>
+   <header>mplwidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <tabstops>
+  <tabstop>powerApp</tabstop>
   <tabstop>TabWidget</tabstop>
+  <tabstop>powerRasberry</tabstop>
+  <tabstop>CheckGraphs</tabstop>
  </tabstops>
  <resources>
   <include location="../new.qrc"/>
