--- a/Camper Water System Program/image.qrc
+++ b/Camper Water System Program/image.qrc
@@ -1,7 +1,8 @@
 <RCC>
-  <qresource prefix="newPrefix">
-    <file>background.jpg</file>
-    <file>raspberrypi.png</file>
-    <file>powerApp.png</file>
+  <qresource prefix="images">
+    <file>icons/AppPwrBttnImg.jpg</file>
+    <file>icons/background1.jpg</file>
+    <file>icons/RaspPiPwrBttnImg.jpg</file>
+    <file>icons/RefreshBttnImg.jpg</file>
   </qresource>
 </RCC>
