--- a/Camper Water System Program/image.qrc
+++ b/Camper Water System Program/image.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="images">
+    <file>icons/FaucetMenuIcon.jpg</file>
     <file>icons/AppPwrBttnImg.jpg</file>
     <file>icons/background1.jpg</file>
     <file>icons/RaspPiPwrBttnImg.jpg</file>
