--- a/Camper Water System Program/UI/mainWindow.ui
+++ b/Camper Water System Program/UI/mainWindow.ui
@@ -266,11 +266,11 @@
        <number>24</number>
       </property>
      </widget>
-     <widget class="QLabel" name="SensorInfoBackground">
+     <widget class="QLabel" name="SensorBackground">
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-35</y>
+        <y>-30</y>
         <width>800</width>
         <height>480</height>
        </rect>
@@ -285,7 +285,7 @@
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/images/icons/background1.jpg&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
-     <zorder>SensorInfoBackground</zorder>
+     <zorder>SensorBackground</zorder>
      <zorder>GreyWaterLabel</zorder>
      <zorder>BlackWaterLabel</zorder>
      <zorder>BatteryLabel</zorder>
@@ -350,7 +350,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-40</y>
+        <y>-30</y>
         <width>800</width>
         <height>480</height>
        </rect>
@@ -453,7 +453,7 @@
        <string/>
       </property>
      </widget>
-     <widget class="QLabel" name="SensorInfoBackground_2">
+     <widget class="QLabel" name="PowerBackground">
       <property name="geometry">
        <rect>
         <x>0</x>
@@ -472,7 +472,7 @@
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/images/icons/background1.jpg&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
-     <zorder>SensorInfoBackground_2</zorder>
+     <zorder>PowerBackground</zorder>
      <zorder>powerApp</zorder>
      <zorder>powerRasberry</zorder>
     </widget>
